--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,25 @@
-.point-status {
+.status-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 250px;
+}
+
+.status-container {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
-  width: 140px;
-  height: 155px;
-  padding: 10px !important;
-}
-
-.point-status .status-column {
-  flex: 1;
-}
-
-.point-status .status-column .work-status {
-  margin-bottom: 15px;
-}
-
-.point-status .text-column {
-  flex: 2;
-}
-
-.point-status .text-column .work-status {
-  width: 80px;
-  height: 30px;
   align-items: center;
-  display: flex;
-  justify-content: flex-end;
-  text-align: right;
+  margin: 5px 0;
 }
 
-.point-status .text-column .work-status-margin {
-  margin-bottom: 15px;
+.timer-container {
+  position: absolute;
+  right: 15px;
+  top: 10px;
 }
 
 .timer {
