--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,55 @@
+.app {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+}
+
+.map {
+  flex-grow: 1;
+  width: 100%;
+  overflow-y: scroll;
+}
+
+.settings {
+  width: 100%;
+  height: 200px;
+}
+
+/* -------------------------------------------------- */
+
+.fields-container {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.label {
+  margin: 10px 0 !important;
+}
+
+.field-column {
+  width: 185px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10px;
+}
+
+.button-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  margin: 40px 0 0 20px;
+}
+
+/* -------------------------------------------------- */
+
 .status-card {
   position: relative;
   display: flex;
