--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,61 @@
   flex-grow: 1;
   width: 100%;
   overflow-y: scroll;
+  padding: 20px 10px;
 }
 
 .settings {
   width: 100%;
   height: 200px;
+}
+
+/* -------------------------------------------------- */
+
+.parallel {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin: 50px 0;
+}
+
+.checkoutGroup {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 600px;
+}
+
+.cook-card {
+  margin: 50px 0;
+}
+
+.cook-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.arrow {
+  width: 50px;
+  height: 50px;
+}
+
+.arrow-parallel {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.arrow-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 600px;
 }
 
 /* -------------------------------------------------- */
